--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+
+.navbar-brand {
+    font-size: 24px;
+}
+
 .box {
     position: relative;
     top: 2px;
@@ -78,6 +83,10 @@ section.cadastro-lead h2 {
     vertical-align: middle;
 }
 
+section.cadastro-lead h2>svg{
+    margin-bottom: 5px;
+}
+
 section.cadastro-lead form {
     vertical-align: middle;
     position: relative;
@@ -96,6 +105,43 @@ section.cadastro-lead input[type=submit] {
     width: 15%;
     height: 40px;
     vertical-align: middle;
+}
+
+section.depoimento {
+    padding: 40px 0;
+}
+
+section.depoimento h2 {
+    color: #4b4b4b;
+}
+
+section.depoimento blockquote {
+    color: #4b4b4b;
+    font-size: 16px;
+}
+
+section.diferenciais {
+    padding: 30px 0;
+    background-color: rgb(225, 225, 225);
+
+}
+
+section.diferenciais > h2{
+    font-size: 32px;
+    color: #4b4b4b;
+}
+
+.diferenciais  h2{
+    font-size: 22px;
+    color: #4b4b4b;
+}
+
+section.diferenciais .col-md-4 {
+    padding: 25px 25px 0 !important;
+    color: #4b4b4b;
+}
+section.diferenciais .container h3 {
+    color: rgb(92, 41, 32);
 }
 
 
