commit 3 - Seção Equipe

--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,48 @@ section.diferenciais .col-md-4 {
     color: #4b4b4b;
 }
 section.diferenciais .container h3 {
-    color: rgb(92, 41, 32);
+    color: rgb(77, 37, 30);
 }
+
+section.equipe h2 {
+    background-color: rgb(21, 182, 160);
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.equipe-container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.equipe-single {
+    margin-bottom: 25px;
+    width: 100%;
+    padding: 20px 10px;
+    border: 1px solid #ccc;
+    box-shadow: 8px 7px 5px -3px rgba(20, 20, 20, 0.6);
+}
+
+.user-picture {
+    width: 100%;
+    padding-top: 100%;
+    position: relative;
+    left: 30%;
+    transform: translate(-50% 0%);
+}
+
+.user-picture-child {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-radius: 50%;
+    height: 100%;
+    background-color: rgba(134, 78, 78, 0.466);
+}
+
+
 
 
 @media screen and (max-width: 1024px){
@@ -150,5 +190,11 @@ section.diferenciais .container h3 {
         vertical-align: middle;
         position: relative;
         top: 0px;
+    }
+
+    .user-picture{
+        width: 40%;
+        padding-top: 40%;
+        position: relative;
     }
 }
