--- a/admin/css/styleAdmin.css
+++ b/admin/css/styleAdmin.css
@@ -1,15 +1,36 @@
+.navbar-default,
+.cor-padrao{
+  background-color: #5995b6 !important;
+  border-color: #4c7b94 !important;
+  color: white !important;
+ }
+
+
+ body {
+    background-color: #ccc;
+    width: 100%;
+    top: 0;
+
+ }
 
 header#header {
     background-color: brown;
     width: 100%;
     padding: 10px 0;
     color: white;
+
 }
 
 #header .container h2 svg{
     vertical-align: middle;
     margin-right: 10px;
 }
+
+
+section.bread {
+    margin-top: 20px;
+}
+
 
 
 
